# software_architecture_with_cpp

./: CMakeLists.txt  README.md  index.html  speaking_content.md  workshop_slides.md
ch10_security/: CMakeLists.txt  README.md
ch10_security/src/: security_demo.cpp
ch11_performance/: CMakeLists.txt  README.md
ch11_performance/src/: perf_demo.cpp
ch12_service_oriented_architecture/: CMakeLists.txt  README.md
ch12_service_oriented_architecture/src/: soa_demo.cpp
ch13_designing_microservices/: CMakeLists.txt  README.md
ch13_designing_microservices/src/: microservice_demo.cpp
ch14_containers/: README.md
ch15_cloud_native_design/: README.md
ch1_architecture_principles/: CMakeLists.txt  README.md
ch1_architecture_principles/src/: coupling_cohesion_demo.cpp  solid_demo.cpp
ch2_architectural_styles/: CMakeLists.txt  README.md
ch2_architectural_styles/src/: event_system_demo.cpp
ch3_functional_nonfunctional_requirements/: README.md
ch4_architectural_system_design/: CMakeLists.txt  README.md
ch4_architectural_system_design/src/: cqrs_demo.cpp
ch5_cpp_language_features/: CMakeLists.txt  README.md
ch5_cpp_language_features/src/: optional_demo.cpp  raii_demo.cpp  type_safety_demo.cpp
ch6_design_patterns_cpp/: CMakeLists.txt  README.md
ch6_design_patterns_cpp/src/: crtp_demo.cpp  factory_demo.cpp  observer_demo.cpp
ch7_building_packaging/: CMakeLists.txt  README.md
ch7_building_packaging/src/: cmake_patterns_demo.cpp
ch8_writing_testable_code/: CMakeLists.txt  README.md
ch8_writing_testable_code/src/: testing_demo.cpp
ch9_cicd/: README.md
